Fix blue border around first alert.

--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -154,3 +154,7 @@ markdown h1:not(:first-child) {
         --box-shadow: 0 0 100px  #111; 
     }
 }
+
+.alert-wrapper:focus-visible {
+    outline: 0px;
+}
