--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.scss
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.scss
@@ -14,6 +14,7 @@
 }
 
 .placeholder {
+    cursor: default;
     text-align: center;
     max-width: 30em;
     padding: 0 2em;
@@ -27,4 +28,8 @@ ion-list {
 
 ion-item.metadata {
     text-align: center;
+}
+
+.directory-stats {
+    cursor: default;
 }
