--- a/web/pwa/src/app/component/session-settings/session-settings.component.scss
+++ b/web/pwa/src/app/component/session-settings/session-settings.component.scss
@@ -15,3 +15,18 @@ h1 {
     margin-left: 1rem;
     margin-right: 1rem;
 }
+
+.nand-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    ion-input {
+        flex-grow: 1;
+    }
+
+    ion-button {
+        max-height: 1.5em;
+        align-self: end;
+    }
+}
