Support uarm session export.

--- a/web/pwa/src/app/component/session-settings/session-settings.component.html
+++ b/web/pwa/src/app/component/session-settings/session-settings.component.html
@@ -47,6 +47,7 @@
             <ion-item lines="none">
                 <div class="nand-container">
                     <ion-input
+                        class="input-nand"
                         label="NAND flash contents"
                         labelPlacement="stacked"
                         placeholder="blank"
