--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -46,8 +46,14 @@
         <ion-label>Eject {{ hasMemorystick ? 'stick' : 'SD card' }}</ion-label>
         <ion-icon name="log-out-outline" slot="end"></ion-icon>
     </ion-item>
-    <ion-item lines="full" button [detail]="false" *ngIf="isMuted && !isAudioOff" (click)="mute(false)">
-        <ion-label>{{ isInitialized ? 'Unmute' : 'Enable' }} audio</ion-label>
+    <ion-item
+        lines="full"
+        button
+        [detail]="false"
+        *ngIf="(isMuted || audioRequiresReactivate) && !isAudioOff"
+        (click)="mute(false)"
+    >
+        <ion-label>{{ audioRequiresReactivate ? 'Reactivate' : isInitialized ? 'Unmute' : 'Enable' }} audio</ion-label>
         <ion-icon name="volume-high-outline" slot="end"></ion-icon>
     </ion-item>
     <ion-item lines="full" button [detail]="false" *ngIf="!isMuted && !isAudioOff" (click)="mute(true)">
