--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -56,7 +56,13 @@
         <ion-label>{{ audioRequiresReactivate ? 'Reactivate' : isInitialized ? 'Unmute' : 'Enable' }} audio</ion-label>
         <ion-icon name="volume-high-outline" slot="end"></ion-icon>
     </ion-item>
-    <ion-item lines="full" button [detail]="false" *ngIf="!isMuted && !isAudioOff" (click)="mute(true)">
+    <ion-item
+        lines="full"
+        button
+        [detail]="false"
+        *ngIf="!isMuted && !isAudioOff && !audioRequiresReactivate"
+        (click)="mute(true)"
+    >
         <ion-label>Mute audio</ion-label>
         <ion-icon name="volume-mute-outline" slot="end"></ion-icon>
     </ion-item>
