--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -13,7 +13,7 @@
     <ion-item
         lines="full"
         button
-        *ngIf="hasActiveSession"
+        *ngIf="hasActiveSession && !powerDisabled"
         [detail]="false"
         (click)="hotsync()"
         [disabled]="!emulationService.isRunning()"
