Copying and pasting the version is actually pretty useful.

--- a/web/pwa/src/app/page/about/about.page.html
+++ b/web/pwa/src/app/page/about/about.page.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="version">
-        CloudpilotEmu version {{ version }}
+        <span class="text-selectable">CloudpilotEmu version {{ version }}</span>
         <br />
         <a href="javascript:" (click)="showChangelog()">Changelog</a>
         @if (serviceWorkerAvailable) {
